# Recall-Aware-Early-Termination-in-Approximate-Nearest-Neighbor-Search

./: README.md
DARTH-main/: CMakeLists.txt  Makefile  README.md  requirements.txt
DARTH-main/c_api/: Makefile  cmake_install.cmake
DARTH-main/demos/: Makefile  cmake_install.cmake
DARTH-main/experiments/: hnsw_baseline_naive_early_stop.sh  hnsw_create_index.sh  hnsw_darth_test.sh  hnsw_laet_test.sh  hnsw_plain_search.sh  hnsw_rem.sh  hnsw_training_data_generation.sh  hnsw_validation_interval_tuning.sh  ivf_darth.sh  ivf_plain_search.sh  ivf_training_data_generation.sh  tuning.py  脚本文件功能介绍  获取训练数据集达到要求准确率最小的CNS.py
DARTH-main/faiss/: CMakeLists.txt  IndexHNSW.cpp  IndexHNSW.h  IndexIVF.cpp  IndexIVF.h  Makefile  cmake_install.cmake
DARTH-main/hnsw-test/: CMakeLists.txt  ComUtil.cpp  ComUtil.h  Makefile  VectorDataLoader.cpp  VectorDataLoader.h  cmake_install.cmake  hnsw_test.cpp  ivf_test.cpp
DARTH-main/notebooks_scripts/: extract_data_stats.py  ivf_extract_data_stats.py  ivf_predictor_training.py  ivf_predictor_validation.py  ivf_print_heuristic_stats.py  laet_training.py  predictor_comparison.py  predictor_training.py  predictor_training_dims.py  predictor_validation.py  raet_CNS_testing.py  raet_CNS_training.py  raet_testing.py  raet_training.py  raet_training_删除入口点特征.py  raet_training_删除入口点特征和插入到前k位置数量特征.py  raet_training_删除插入到前k位置数量特征.py  raet_training_删除查询点向量特征.py  raet_validation.py  training_results_GLOVE100_u10K.json  training_results_SIFT1M_u10K.json  脚本文件功能介绍  获取Darth需要的distsRt.py
DARTH-main/tests/: CMakeLists.txt  (+4 more)
NSG/: CMakeLists.txt
NSG/create_train_model/: train_model.py
NSG/experiment/0-k10/1-REM/: 1-get_tarin_min_CNS_to_target_recall.sh  2-REM-search.sh
NSG/experiment/0-k10/2-LAET/: 1-get_train_data.sh  2-1-F参数-80%数据点达到99准确率的最小dist.py  3-train_model.py  4-laet-search.sh
NSG/experiment/0-k10/3-Darth/: 1-0-获取Darth训练数据.sh  1-2-获取darth需要的distRT.sh  2-Darth训练模型.py  4-1-Darth-搜索-时间.sh  4-2-Darth-搜索-指标.sh
NSG/experiment/0-k10/4-our_RAET/: 0-gist训练数据的删减.py  0-获取达到平均准确率时-每个查询点达到的准确率REM-search.sh  1-获取训练数据集中达到要求准确率的最小稳定次数.sh  2-Raet训练模型.py  2-无用-Raet训练模型-new.py  3-Raet搜索-指标.sh  3-Raet搜索-根据每个查询点的准确率.sh  3-Raet搜索.sh
NSG/experiment/0-k100-full/: recall_statistics.csv  达到召回率占比.py
NSG/experiment/0-k100-full/0-test_CNS300/: 1-get_train_data.sh  2-获取darth需要的distRT.sh  3-Darth训练模型.py  4-Darth-搜索-时间.sh  5-获取训练数据集中达到要求准确率的最小稳定次数.sh  6-刚好达到要求准确率的平均稳定次数.sh  7-Raet训练模型.py  8-Raet搜索.sh
NSG/experiment/0-k100-full/1-REM/: 1-REM-search.sh  REM达标率.py
NSG/experiment/0-k100-full/2-LAET/: 1-1-get_test_data.sh  1-get_train_data.sh  2-1-无用-F参数-80%数据点达到95准确率的最小dist.py  2-2-train_model.py  2-3-m参数-获取达到要求准确率的参数.py  3-laet-search.sh
NSG/experiment/0-k100-full/3-Darth/: 1-2-获取darth需要的distRT.sh  2-Darth训练模型.py  3-0-无用-获取测试数据集以验证模型.sh  4-1-Darth-搜索-时间.sh  4-2-Darth-搜索-指标.sh  5-1-验证预测准确率-回归模型误差.py  95test.csv  95test_0_1.csv
NSG/experiment/0-k100-full/4-our_RAET/: 0-无用-获取训练数据_=0.9开始.sh  0-训练数据截断.py  1-0-获取训练数据集中达到要求准确率的最小稳定次数.sh  1-1-刚好达到要求准确率的平均稳定次数.py  1-1-测试-刚好达到要求准确率的平均稳定次数.py  1-2-刚好达到要求准确率的平均稳定次数.sh  2-Raet训练模型.py  2-无用-Raet训练模型-有query.py  3-Raet搜索-指标.sh  3-Raet搜索.sh  4-1-验证预测准确率-回归模型误差.py  95test.csv  95test_0_1.csv  95test_ge90.csv
NSG/experiment/0-k100-full/4-our_RAET/0-分析/: darth和预测准确率方法搜索过程分析.py
NSG/experiment/0-k100-full/5-our_RAET_CNS/: 1-1-获取CNS训练数据.sh  1-2-获取CNS训练标签.sh  2-1-训练回归模型.py  2-1-训练回归模型_Noquery_Noske_Nodensty.py  2-2-Raet_CNS搜索.sh  2-2-Raet_CNS搜索_Noquery_Noske_Nodensty.sh  2-3-Raet_CNS搜索-指标.sh  4-2-Raet_CNS二分类搜索.sh
NSG/experiment/0-k100-full/6-our/: 1-recall-train-label.sh  2-CNS-train-label.sh  3-向量特征训练二分类模型.py  3-获取决策树.py  4-Selector.sh  4-向量特征模型准确率.py  6-1-达标率.py  6-2-模型选择占比.py
NSG/experiment/0-k50-full/: recall_statistics.csv  达到召回率占比.py
NSG/experiment/0-k50-full/1-REM/: 1-REM-search.sh  REM达标率.py
NSG/experiment/0-k50-full/2-LAET/: 1-get_train_data.sh  2-1-无用-F参数-80%数据点达到99准确率的最小dist.py  3-train_model.py  4-m参数-获取达到要求准确率的参数.py  5-laet-search.sh
NSG/experiment/0-k50-full/3-Darth/: 1-1-获取darth需要的distRT.py  1-2-获取darth需要的distRT.sh  2-Darth训练模型.py  3-1-测试集上验证模型.py  4-1-Darth-搜索-时间.sh  4-2-Darth-搜索-指标.sh
NSG/experiment/0-k50-full/4-our_RAET/: 0-无用-gist训练数据的删减.py  0-训练数据截断.py  1-0-获取训练数据集中达到要求准确率的最小稳定次数.sh  1-2-刚好达到要求准确率的平均稳定次数.sh  2-Raet训练模型.py  3-Raet搜索.sh  4-0-get_test_data.sh  4-1-验证预测准确率-回归模型误差.py
NSG/experiment/0-k50-full/5-our_RAET_CNS/: 1-1-获取CNS训练数据.sh  1-2-获取CNS训练标签.sh  2-1-训练回归模型.py  2-1-训练回归模型_Noquery_Noske_Nodensty.py  2-1-训练回归模型无分位数_Noquery_Noske_Nodensty.py  2-2-Raet_CNS搜索.sh  2-2-Raet_CNS搜索_Noquery_Noske_Nodensty.sh  2-2-Raet_CNS搜索分类+回归_Noquery_Noske_Nodensty.sh  2-3-Raet_CNS搜索-指标.sh  4-1-训练二分类模型_Noquery_Noske_Nodensty.py  4-2-Raet_CNS二分类搜索.sh
NSG/experiment/0-k50-full/6-our/: 1-recall-train-label.sh  2-CNS-train-label.sh  3-获取决策树.py  4-Selector.sh  5-向量特征训练二分类模型.py  6-向量特征模型准确率.py
NSG/experiment/1-REM/: 1-get_tarin_min_CNS_to_target_recall.sh  2-REM-search.sh
NSG/experiment/2-LAET/: 1-get_train_data.sh  2-1-F参数-80%数据点达到99准确率的最小dist.py  2-（暂时无用，手动调整参数使得达到要求准确率）获取达到要求准确率的参数.py  3-train_model.py  4-laet-search.sh
NSG/experiment/3-Darth/: 1-2-获取darth需要的distRT.sh  2-Darth训练模型.py  4-1-Darth-搜索-时间.sh  4-2-Darth-搜索-指标.sh
NSG/experiment/4-our_RAET/: 1-获取训练数据集中达到要求准确率的最小稳定次数.sh  2-Raet训练模型.py  3-Raet搜索-指标.sh  3-Raet搜索.sh
NSG/experiment/5-our_RAET_CNS/: 1-1-获取CNS训练数据.sh  1-2-获取CNS训练标签.sh  2-1-训练回归模型.py  4-1-训练二分类模型.py
NSG/experiment/分布外数据集/: 1、格式转换.py  2、获取L2距离的K近邻.py  3、数据集切分.py
NSG/include/efanna2e/: index_nsg.h
NSG/src/: CMakeLists.txt  index_nsg.cpp
NSG/tests/: CMakeLists.txt  test.cpp  test_nsg_optimized_search.cpp
(+451 files in other folders)
